--- a/style.css
+++ b/style.css
@@ -1,8 +1,7 @@
 body.bg {
   margin:0;
   font-family: Arial, sans-serif;
-  background: url('https://picsum.photos/1920/1080?blur=5') no-repeat center center fixed;
-  background-size: cover;
+  background-color: #121212;
   display: flex;
   justify-content: center;
   align-items: center;
